--- a/RecordSequencer/Info.plist
+++ b/RecordSequencer/Info.plist
@@ -6,5 +6,7 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires microphone access to record audio.</string>	
 </dict>
 </plist>
